deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-api-ice
  labels:
    app: mi-api-ice
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      octopuseexport: octopuseexport
  template:
    metadata:
      labels:
        app: mi-api-ice
        octopuseexport: octopuseexport
    spec:
      containers:
      - name: mi-api-ice
        image: mi-api-ice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
