ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-api-ice
spec:
  rules:
  - host: api.jmedel.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mi-api-ice
            port:
              number: 80
